<resources>
    <string name="app_name">Android Services</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_sticky">Start Sticky</string>
    <string name="start_not_sticky">NOT STICKY</string>
    <string name="start_redelivery">REDELIVERY</string>

    <string name="service_stop">STOP SERVICE</string>
    <string name="process_exception">EXCEPTION</string>

    <string name="start_services">Start Services</string>
    <string name="title_activity_bound_services">Bound Services</string>
    <string name="next_local_binder">Next: Local Bound Services</string>


    <string name="bound_get_random_number">Get Random Number</string>
    <string name="next_remote_binder">Next: Remote Bound Services</string>

    <string name="bound_bind_service">Bind Service</string>

    <string name="bound_unbind_service">Unbind Service</string>

    <string name="action_dont_destroy">Next Without Destroy</string>
    <string name="title_activity_remote_bound_services">Remote Bound Services</string>
    <string name="remote_bound_decode">ENCODE</string>

</resources>
