<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="edu.navalkishoreb.androidservices.components.LocalBoundServices">

    <TextView
        android:id="@+id/tv_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        tools:text="@string/hello_world"/>

    <Button
        android:id="@+id/btn_getOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_output"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:text="@string/bound_get_random_number"/>

    <Button
        android:id="@+id/btn_bindService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_getOutput"
        android:layout_marginTop="@dimen/button_bound_separate_margin"
        android:text="@string/bound_bind_service"/>

    <Button
        android:id="@+id/btn_unbindService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_bindService"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:text="@string/bound_unbind_service"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/button_vertical_margin"
        android:gravity="center"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:text="@string/next_remote_binder"/>


</RelativeLayout>
