<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:weightSum="5"
              tools:context="edu.navalkishoreb.androidservices.components.RemoteBoundServices">

    <EditText
        android:id="@+id/edt_remote_bound_encode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/button_bound_separate_margin"
        android:layout_weight="2"
        android:ellipsize="end"
        android:gravity="center"
        android:inputType="textShortMessage"
        android:maxLines="1"
        android:textSize="22sp"
        tools:text="@string/hello_world"/>

    <Button
        android:id="@+id/btn_remote_bound_decode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remote_bound_decode"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_remote_bound_bind"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/bound_bind_service"/>

        <Button
            android:id="@+id/btn_remote_bound_unbind"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/bound_unbind_service"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_remote_bound_decoded"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/button_bound_separate_margin"
        android:layout_weight="2"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textSize="22sp"
        tools:text="@string/hello_world"/>

</LinearLayout>
